<resources>
    <string name="app_name">RssTabletCore</string>
    <string name="l_project">My Projects</string>
    <string name="l_book">Photo Books</string>
    <string name="l_kiosk_connect">Kiosk Connect</string>
    <string name="l_print">Prints</string>
    <string name="l_card">Cards</string>
    <string name="l_poster">Posters</string>
    <string name="l_collage">Collages</string>
    <string name="l_calendar">Calendars</string>
    <string name="previous">Previous</string>
    <string name="cart">Cart</string>
    <string name="Continue">Continue</string>
    <string name="back">Back</string>
    <string name="sources">Sources</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="side_menu_home">Home</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_tips">Tips</string>
    <string name="side_menu_info">Info</string>
    <string name="side_menu_login">Login</string>
    <string name="side_menu_logout">Logout</string>
    <string name="prints_tool_color">Color Effects</string>
    <string name="prints_tool_redeye">Red Eye</string>
    <string name="prints_tool_undoedeye">Undo Red Eye</string>
    <string name="prints_tool_enhance">Enhance</string>
    <string name="prints_tool_undoenhance">Undo Enhancement</string>
    <string name="prints_tool_rotate">Rotate Crop Box</string>
    <string name="prints_prompt">Make lasting memories with beautiful prints!</string>
    <string name="prints_prompt_choose">Choose your photos below</string>
    <string name="privious_layout_content">Are you sure? You will lose all your work. </string>
    <string name="cart_layout_content">Select at least 1 Photos. </string>
    <string name="low_warning_content">\t\t\tLow Resolution Warning: \n If printed, this photo may look grainy.The photo \n \t is either too small or zoomed in too far for this print size.\n Please zoom out or choose a smaller print size.</string>
    <string name="No_image_find_on_facebook">No Facebook images were found, please select another friend or group. </string>
    <string name="start_over_prompt">There are items in your cart. Are you sure \n \t\t you want to start over? </string>
    <string name="d_yes">Yes</string>
    <string name="d_no">No</string>
    <string name="d_ok">OK</string>
    <string name="cart_unit">items</string>
    <string name="EULAScreen_Title">License Agreement</string>
    <string name="EULAScreen_Description">To use this app, you must agree to the terms of the license.</string>
    <string name="PrivacyScreen_Title">Privacy Policy</string>
    <string name="PrivacyScreen_AgreeToPrivacy">Agree to policy</string>
    <string name="tip_exit_help">Exit\t Help</string>
    <string name="tip_title">Help</string>
    <string name="TitlePage_Error_NoInternet">No active internet connection found.</string>
    <string name="TitlePage_Error_App_Obsolete">This application needs to be updated.</string>
    <string name="TitlePage_Error_Saved_Store_Not_In_Country">Your saved store is in a different country and this may affect product availability.\nUse saved store, or change country?</string>
    <string name="TitlePage_Error_No_Products_In_Country">Sorry, there are no \"Create and Order from phone\" products available in this country, contact customer service for further assistance.</string>
     <string name="titlepage_error_location_not_determined">Your Location could not be automatically determined.\nPlease change country for a new product list.</string>
    <string name="startup_getting_products">GETTING\nPRODUCTS...</string>
    <string name="startup_get_start">GET\nSTARTED</string>
    <string name="Task_GettingProducts">Getting products...</string>
    <string name="Task_No_Internet">3G/4G or Wi-Fi not available, verify your connection.</string>
    <string name="Task_CreatingPhotobook">Creating Photobook...</string>
    <string name="Task_Add_Photos_Prompt">Adding the selected photos to your Photo Book</string>
    <string name="Task_CreatingProduct">Creating product...</string>
    <string name="Task_RecoverPhotobook">Would you like to recover your in progress Photobook project?</string>
    <string name="Task_RecoverCart">Would you like to recover your in progress Cart?</string>
    <string name="Task_RecoveringCart">Recovering your Cart</string>
    <string name="upload">upload</string>
    <string name="Common_Done">Done</string>
    <string name="Common_ProjectName">Project Name</string>
    <string name="Common_Exit">App exit if tap on Back again</string>
    <string name="Common_Wait">Please wait...</string>
    <string name="Common_Load">Loading Project...</string>
    <string name="Common_SampleText">Sample Text</string>
    <string name="error_cannot_connect_to_internet">Your internet connection is weak, please try another location or network.</string>
    <string name="error_server">Oops, our servers hiccupped, wait a minute and try again.</string>
    <string name="nowificonnection">Tip: To avoid cellular data charges, we recommend \nchanging your phone settings to Wi-Fi.</string>
    <string name="donotaskagain">Don\'t Ask Again</string>
    <string name="mainMenuVersion">Version </string>
    <string name="connectkiosk">Display all photos on kiosk</string>
    <string name="WifiWorkflow_SendAllDescription">Use this option to display all of your photos on the kiosk.</string>
    <string name="viewtaggedset">View selected, then send</string>
    <string name="WiFiWorkflow_CreateTaggedSet">Select first, then send</string>
    <string name="WifiWorkflow_SendTaggedDescription">Use this option to display only a selection of your photos on the kiosk.</string>
    <string name="findstore">Find Store</string>
    <string name="disablePoorNetworkAvoidance">Auto Network Switching blocks Kiosk communication, please disable the Auto Network switch setting.</string>
    <string name="AlbumSelection_Error_SelectAnImage">Please select at least one picture.</string>
    <string name="N2ROrderConfirmation_Title">Order Confirmation</string>
    <string name="N2ROrderConfirmation_EmailTitle">Confirmation e-mail sent to:</string>
    <string name="N2ROrderConfirmation_OrderDate">Order sent:</string>
    <string name="N2ROrderConfirmation_OrderID">Order ID:</string>
    <string name="N2ROrderConfirmation_OrderSubtotal">Est. Subtotal:</string>
    <string name="N2ROrderConfirmation_TaxesDisclaimer">Pricing is estimated.\nTaxes will be added to your order when you pickup.</string>
    <string name="N2ROrderConfirmation_SubmittedStore">Order sent for pickup at:</string>
    <string name="N2ROrderConfirmation_OrderDetails">Order Details</string>
    <string name="SettingsScreen_PrivacyNotice">I agree to let Kodak Alaris use general tracking features to improve this software. No personal information will be used.</string>
    <string name="SettingsScreen_PrivacyLearnMore">Find out more</string>
    <string name="SettingsScreen_PrivacyHeading">Cookie Usage</string>
    <string name="SettingsScreen_CDG360Heading">E-mail Notfications</string>
    <string name="SettingsScreen_ScreenTitle">Setup</string>
    <string name="SettingsScreen_PreviousOrders">Previous Orders:</string>
    <string name="SettingsScreen_PreviousOrderDates">Date</string>
    <string name="SettingsScreen_PreviousOrderOrderIDs">Order ID</string>
    <string name="SettingsScreen_Required">Required</string>
    <string name="SettingsScreen_DefaultPrintSize">Default Print Size:</string>
    <string name="SettingsScreen_ContactInformation">Your Information:</string>
    <string name="SettingsScreen_PhoneTitle">Phone:</string>
    <string name="SettingsScreen_NameTitle">Name:</string>
    <string name="SettingsScreen_EmailTitle">"Email:</string>
    <string name="SettingsScreen_Email">Email</string>
    <string name="SettingsScreen_Phone">Phone</string>
    <string name="SettingsScreen_FirstName">First</string>
    <string name="SettingsScreen_LastName">Last</string>
    <string name="SettingsScreen_StoreInfo">Store Information:</string>
    <string name="SettingsScreen_ChangeStore">Change Store</string>
    <string name="SettingsScreen_ChangeShipping">Change Shipping</string>
    <string name="SettingsScreen_Change">Change</string>
    <string name="SettingsScreen_SendOnlyTaggedSetHeading">Pictures sent via WiFi:</string>
    <string name="SettingsScreen_SendOnlyTaggedSetNotice">Only Selected Set</string>
    <string name="SettingsScreen_MissingInfoPrompt">Enter the required contact information</string>
    <string name="SettingsScreen_EmailFormatPrompt">E-mail format is incorrect, please correct. e.g. JohnDoe@company.com.</string>
    <string name="SettingsScreen_MissingShippingAddress">Please enter a shipping address</string>
    <string name="SettingsScreen_RateApp">Rate this app</string>
    <string name="OrderScreen_RateApp">Rate this app?</string>
    <string name="SettingsScreen_Rate">Rate</string>
    <string name="SettingsScreen_SelectCountry">Select Country</string>
    <string name="SettingsScreen_Settings">Settings</string>
    <string name="SettingsScreen_Tab_DefaultSize">Default Print Size</string>
    <string name="SettingsScreen_Tab_CustomerInfo">Your Information</string>
    <string name="SettingsScreen_Tab_ShippingInfo">Shipping Address</string>
    <string name="SettingsScreen_Tab_StoreInfo">Store Information</string>
    <string name="SettingsScreen_Tab_Terms">Terms &amp; Privacy</string>
    <string name="SettingsScreen_Tab_OrderHistory">Order History</string>
    <string name="SettingsScreen_Tab_About">About</string>
    <string name="SettingsScreen_View">View</string>
    <string name="SettingsScreen_CustomerInfo_FirstName">First Name</string>
    <string name="SettingsScreen_CustomerInfo_LastName">Last Name</string>
    <string name="SettingsScreen_CustomerInfo_Address1">Address 1</string>
    <string name="SettingsScreen_CustomerInfo_Address2">Address 2</string>
    <string name="SettingsScreen_CustomerInfo_City">City</string>
    <string name="SettingsScreen_CustomerInfo_State">State/Province/Region</string>
    <string name="SettingsScreen_CustomerInfo_Zip">Zip/Postal Code</string>
    <string name="SettingsScreen_Legal">Legal</string>
    <string name="CDG360_Optin">Please send me e-mail from Kodak Alaris about consumer products, offers, and services.</string>
    <string name="ssid">"Wifi name: "</string>
    <string name="password">Password:</string>
    <string name="connect">Connect</string>
    <string name="ManualConnectInstructions">Type in the code provided on the kiosk.</string>
    <string name="nonetworkfound_short">No Kiosk networks found.</string>
    <string name="ComposePhotobook_BackgroundOptions">Page Background Options</string>
    <string name="ComposePhotobook_BackgroundOptions_CopyToFacingPage">Copy</string>
    <string name="ComposePhotobook_BackgroundOptions_CopyToFacingPage_DESC">Copy this background to the facing page</string>
    <string name="ComposePhotobook_BackgroundOptions_ExtendPhoto">Extend</string>
    <string name="ComposePhotobook_BackgroundOptions_ExtendPhoto_DESC">Extend this background to the facing page</string>
    <string name="ComposePhotobook_BackgroundOptions_RemovePhoto">Remove</string>
    <string name="ComposePhotobook_BackgroundOptions_RemovePhoto_DESC">Remove the photo background. The theme background will be restored.</string>
    <string name="EnterTitle">Enter Title</string>
    <string name="EnterAuthor">Enter Author</string>
    <string name="EnterSubtitle">Enter Subtitle</string>
    <string name="ComposePhotobook_TitleAuthorSubtitle">Title, Author, Subtitle</string>
    <string name="save_project">Save Project</string>
    <string name="Cart_minus">-</string>
    <string name="Cart_plus">+</string>
    <string name="cart_one">1</string>
</resources>