<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/info_dialog_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="left"
        android:text="@string/save_project"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"       
        android:orientation="vertical" >

        <TextView
            android:id="@+id/action_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Common_ProjectName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/project_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"         
            android:singleLine="true"
            android:focusable="true"  
            android:focusableInTouchMode="true"  
            android:text="@string/app_name"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/actionbuttonsecondary"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/save_button"
                android:background="@drawable/actionbuttonprimary"
                android:text="@string/cancel" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>