<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a"
    android:orientation="vertical" >

    <include
        android:id="@+id/tit_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_head_hd" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tit_bar"
        android:background="@drawable/actionbuttonsecondary"
        android:text="@string/previous" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_back"
        android:layout_alignParentRight="true"
        android:background="@drawable/actionbuttonprimary"
        android:text="@string/connect" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/ManualConnectInstructions"
            android:textColor="#FBBA06"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/ssid"
                android:textColor="#ffffff"
                android:textSize="40dp" />

            <Button
                android:id="@+id/spinner_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dropdown_button"
                android:ellipsize="marquee"
                android:paddingBottom="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp"
                android:text="@string/nonetworkfound_short"
                android:textColor="#c2c2c2"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/textbarlarge"
            android:inputType="textPassword"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="34dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

</RelativeLayout>
