<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="40dp"
    android:background="@drawable/green_frame"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="3" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/quantityMinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Cart_minus"
            android:textColor="@color/blue_highlight"
            android:textSize="38dp"
            android:layout_marginTop="-14dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/cartNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cart_one"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/quantityPlusButton"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Cart_plus"
        android:textColor="@color/blue_highlight"
        android:textSize="30dp" />

</LinearLayout>